<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground">
    <ImageView

        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#643827"
        android:contentDescription="@string/app_name"
        android:adjustViewBounds="false"
        android:cropToPadding="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username"
        android:hint="@string/user"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/cardview_dark_background" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:hint="@string/email"
        android:textColor="?attr/colorPrimaryDark"
        android:textColorHint="@color/cardview_dark_background" />

</LinearLayout>