<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ fragment_track.xml
  ~ Created by G.Capelli (BasicAirData) on 8/6/2016
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_fragmenttrackFrameLayout"
    tools:context=".FragmentTrack"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/id_fragmenttrack"
        android:background="@color/colorBackground"
        android:paddingTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top|center"
        android:orientation="vertical"
        android:baselineAligned="false">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:text="@string/hiking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView1"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorPrimaryDark" />
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1">

                    <ToggleButton
                        android:text="ToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/redTrail"
                        android:layout_weight="1"
                        android:background="@drawable/red_trail"
                        android:textOn=""
                        android:textOff=""/>

                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ToggleButton
                        android:text="ToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/blueTrail"
                        android:layout_weight="1"
                        android:background="@drawable/blue_trail"
                        android:textOn=""
                        android:textOff=""/>
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.1"
                android:layout_marginLeft="10dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ToggleButton
                        android:text="ToggleButton"
                        android:id="@+id/yellowTrail"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:background="@drawable/yellow_trail"
                        android:textOn=""
                        android:textOff=""/>
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ToggleButton
                        android:text="ToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/greenTrail"
                        android:layout_weight="1"
                        android:background="@drawable/green_trail"
                        android:textOn=""
                        android:textOff=""
                        />
                </TableRow>

            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:text="@string/skiing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorPrimaryDark" />
            </TableRow>
        </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1">

                    <ToggleButton
                        android:text="ToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/redSki"
                        android:layout_weight="1"
                        android:background="@drawable/red_trail"
                        android:textOn=""
                        android:textOff=""/>

                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ToggleButton
                        android:text="ToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/blueSki"
                        android:layout_weight="1"
                        android:background="@drawable/blue_trail"
                        android:textOn=""
                        android:textOff=""/>
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.1"
                android:layout_marginLeft="10dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ToggleButton
                        android:text="ToggleButton"
                        android:id="@+id/greenSki"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:background="@drawable/yellow_trail"
                        android:textOn=""
                        android:textOff=""/>
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ToggleButton
                        android:text="ToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/whiteSki"
                        android:layout_weight="1"
                        android:background="@drawable/green_trail"
                        android:textOn=""
                        android:textOff=""
                        />
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:text="@string/cycling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorPrimaryDark" />
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1">

                    <ToggleButton
                        android:text="ToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/redBike"
                        android:layout_weight="1"
                        android:background="@drawable/red_trail"
                        android:textOn=""
                        android:textOff=""/>

                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ToggleButton
                        android:text="ToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/blueBike"
                        android:layout_weight="1"
                        android:background="@drawable/blue_trail"
                        android:textOn=""
                        android:textOff=""/>
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.1"
                android:layout_marginLeft="10dp">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ToggleButton
                        android:text="ToggleButton"
                        android:id="@+id/greenBike"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:background="@drawable/yellow_trail"
                        android:textOn=""
                        android:textOff=""/>
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <ToggleButton
                        android:text="ToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/whiteBike"
                        android:layout_weight="1"
                        android:background="@drawable/green_trail"
                        android:textOn=""
                        android:textOff=""
                        />
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:text="Surface:"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:textStyle="normal|bold"
                    android:textColor="@color/colorPrimaryDark" />
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="0.1">

                    <Switch
                        android:text="Paved:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/surface"
                        android:checked="true" />
                </TableRow>

            </TableLayout>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>